Update phantom httr references from httr to httr2.
The libcurl version updated when I reknitted README.Rmd. It made me notice that you'll want to be sure to reknit the README after the version gets bumped to pick up the proper version in the User-Agent, which I don't think is a normal part of the checklist.

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ httr2 (pronounced hitter2) is a ground-up rewrite of [httr](https://httr.r-lib.o
 
 ## Installation
 
-You can install httr from CRAN with:
+You can install httr2 from CRAN with:
 
 ``` r
 install.packages("httr2")
